Alert box added.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
   <div id="content-wrapper">
     <header class="header header--bg">
       <div class="container">
+        <p class="alert-box links-main">
+		      <span class="badge">New</span>We are coming soon. Hold tight while we are working on this astonishing product.</a>.
+	      </p>
         <nav class="navbar">
           <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
