unwanted dot removed

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div id="content-wrapper">
     <header class="header header--bg">    
       <p class="alert-box links-main">
-        <span class="badge">New</span> We are coming soon. Hold tight while we are working on this astonishing product.</a>.
+        <span class="badge">New</span> We are coming soon. Hold tight while we are working on this astonishing product.</a>
       </p>
       <div class="container">
         <nav class="navbar">
